--- a/blankFile.html
+++ b/blankFile.html
@@ -8,44 +8,57 @@
     <link href="css/blankStyles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-    <a href="index.html">Home</a>
-    <a href="MyResume.html">Resume</a>
-    <a href="#">About Me</a></header>
-    <p>Born in California, graduated high school in Arizona, served a mission in Santiago, Chile and attends BYU.<br>5th child of 6, married to my wife Mary on February 11, 2023</p>
+    <div id="top" class="common header">
+        <span class="float"><a href="index.html">Home</a>
+        <a href="MyResume.html">Resume</a>
+        <a href="#">About Me</a></span>
 
-    <img src="assets/img/FamilyPicAtTemple.jpg" height="300" alt="Picture 1">
-    <iframe width="550" height="300" src="https://www.youtube.com/embed/qH3Y1dDBddg" title="Family Youtube Video" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br><br>
-    
-    Life events<br>
-    <a href="#hs">High school</a><br>
-    <a href="#mish">Mission</a><br>
-    <a href="#col">College</a>
-    <ol>
-        <li id="hs">High school
-            <ul>
-                <li>Mens volleyball team</li>
-                <li>Mens water polo team</li>
-                <li>National honor society</li>
-                <li>Invited to leadership summit at freedom's foundation at valley forge</li>
-                <li>Lifeguard</li>
-                <li>Krispy kreme employee</li>
-            </ul>
-        </li>
-        <li id="mish">Mission
-            <ul>
-                <li>Trained in the Boise, Idaho mission</li>
-                <li>Transferred to Chile, Santiago North mission at 9 months</li>
-                <li>District leader in Chile, Santiago North mission</li>
-            </ul>
-        </li>
-        <li id="col">College
-            <ul>
-                <li>2.5 overall GPA</li>
-                <li>On academic probation during my mission, recovered upon return</li>
-                <li>Began as pre-mechanical engineering major, switched to pre-business</li>
-            </ul>
-        </li>
-    </ol>
+        <h1>About Me</h1>
+        Born in California, graduated high school in Arizona, served a mission in Santiago, Chile and attends BYU. 5th child of 6, married to my wife Mary on February 11, 2023
+    </div>
+    <div class="common leftside">
+        Life events<br>
+        <a href="#hs">High school</a><br>
+        <a href="#mish">Mission</a><br>
+        <a href="#col">College</a>
+    </div>
+    <div class="common middle">
+        <ol>
+            <li id="hs"><h3>High school</h3>
+                <ul>
+                    <li>Mens volleyball team</li>
+                    <li>Mens water polo team</li>
+                    <li>National honor society</li>
+                    <li>Invited to leadership summit at freedom's foundation at valley forge</li>
+                    <li>Lifeguard</li>
+                    <li>Krispy kreme employee</li>
+                </ul>
+            </li>
+            <li id="mish"><h3>Mission</h3>
+                <ul>
+                    <li>Trained in the Boise, Idaho mission</li>
+                    <li>Transferred to Chile, Santiago North mission at 9 months</li>
+                    <li>District leader in Chile, Santiago North mission</li>
+                </ul>
+            </li>
+            <li id="col"><h3>College</h3>
+                <ul>
+                    <li>2.5 overall GPA</li>
+                    <li>On academic probation during my mission, recovered upon return</li>
+                    <li>Began as pre-mechanical engineering major, switched to pre-business</li>
+                </ul>
+            </li>
+        </ol>
+    </div>
+    <div class="common rightside">
+        <img src="assets/img/FamilyPicAtTemple.jpg" width="300" height="225" alt="Picture 1"><br>
+        <iframe width="295" height="220" src="https://www.youtube.com/embed/qH3Y1dDBddg" title="Family Youtube Video" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br><br>
+    </div>
+    <div class="common tableau">
+        <div class='tableauPlaceholder' id='viz1681943463872'><noscript><a href='#'><img alt='Is Your County Obese?                            Select your county to see how it compares with other counties in the country                         ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;WebDevTest_16819428103750&#47;Obesity&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='WebDevTest_16819428103750&#47;Obesity' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;WebDevTest_16819428103750&#47;Obesity&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1681943463872');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} else { vizElement.style.width='100%';vizElement.style.height='877px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    </div>
+    <div class="common footer">
+        Click <a class="bottomlink" href="#top">here</a> to go back to the top of the page
+    </div>
 </body>
 </html>
