--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="MyResume.html">Resume</a></li>
+                        <li class="nav-item"><a class="nav-link" href="blankFile.html">About Me</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
